# python-boilerplate

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
Docker/: Dockerfile-python-3.13  build-run.sh
include/: matmul.h
scripts/: build_wheel.sh  example.py
src/: bindings.cpp  matmul.cpp
src/package_example/: __init__.py  operations.py
tests/: test_matmul.py
