[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle & Warnings
    "E",
    "W",
    # isort for unsorted imports
    "I001",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = "^(build/|\\.venv/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
